rework images